tests/baselines/reference/ambientModuleDeclarationWithReservedIdentifierInDottedPath2.errors.txt
ambientModuleDeclarationWithReservedIdentifierInDottedPath2.ts(9,1): error TS2304: Cannot find name 'declare'.
ambientModuleDeclarationWithReservedIdentifierInDottedPath2.ts(9,9): error TS2304: Cannot find name 'namespace'.
ambientModuleDeclarationWithReservedIdentifierInDottedPath2.ts(9,19): error TS2819: Namespace name cannot be 'debugger'.
ambientModuleDeclarationWithReservedIdentifierInDottedPath2.ts(9,28): error TS1005: ';' expected.


==== ambientModuleDeclarationWithReservedIdentifierInDottedPath2.ts (4 errors) ====
    declare namespace chrome.debugger {
        declare var tabId: number;
    }
    
    export const tabId = chrome.debugger.tabId;
    
    declare namespace test.class {}
    
    declare namespace debugger {} // still an error
    ~~~~~~~
!!! error TS2304: Cannot find name 'declare'.
            ~~~~~~~~~
!!! error TS2304: Cannot find name 'namespace'.
                      ~~~~~~~~
!!! error TS2819: Namespace name cannot be 'debugger'.
                               ~
!!! error TS1005: ';' expected.
    